<!--
  ~ Copyright (C) 2018 Google Inc.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Bakery</string>
    <string name="intro_text">Desserts</string>
    <string name="donuts">Donuts are glazed and sprinkled with candy.</string>
    <string name="ice_cream_sandwiches">Ice cream sandwiches have chocolate
        wafers and vanilla filling.</string>
    <string name="froyo">FroYo is premium self-serve frozen yogurt.</string>
    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream
        sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="order_label_text">Order:</string>
    <string name="note_label_text">Note:</string>
    <string name="name_label_text">Name</string>
    <string name="enter_name_hint">Enter your name</string>
    <string name="address_label_text">Address</string>
    <string name="enter_address_hint">Enter address</string>
    <string name="phone_label_string">Phone</string>
    <string name="enter_phone_hint">Enter phone</string>
    <string name="enter_note_hint">Enter note</string>
    <string name="choose_delivery_method">Choose a delivery method:</string>
    <string name="same_day_messenger_service">Same day messenger
        service</string>
    <string name="next_day_ground_delivery">Next day ground delivery</string>
    <string name="pick_up">Pick up</string>
    <string name="action_contact">Contact</string>
    <string name="action_order">Order</string>
    <string name="action_status">Status</string>
    <string name="action_favorites">Favorites</string>
    <string name="action_status_message">You selected Status.</string>
    <string name="action_favorites_message">You selected Favorites.</string>
    <string name="action_contact_message">You selected Contact.</string>
    <string name="title_activity_order">Order Activity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_login">Login Activity</string>
    <string name="title_activity_logout">Logout Activity</string>
    <string name="title_activity_register">Register Activity</string>
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social
        recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations
        for people to contact based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to
        messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_account">Account</string>

    <string name="pref_title_account">Market</string>
    <string-array name="pref_market_titles">
        <item>United States</item>
        <item>Canada</item>
        <item>United Kingdom</item>
        <item>India</item>
        <item>Japan</item>
        <item>Other</item>
    </string-array>
    <string-array name="pref_market_values">
        <item>US</item>
        <item>CA</item>
        <item>UK</item>
        <item>IN</item>
        <item>JA0</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_account_settings">Account settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message
        notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="settings">Settings</string>
    <string name="create_your_account">Create your account!</string>
    <string name="full_name">Full Name</string>
    <string name="name">Name</string>
    <string name="email">Email</string>

    <string name="password">Password</string>
    <string name="phone_numb">phone_number</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_login_here">Already have an account! Login Here</string>
    <string name="phone_number2">Phone Number</string>
    <string name="login">Login</string>
    <string name="login2">LOGIN</string>
    <string name="don_t_have_an_account_register_here">Don\'t have an account! Register here.</string>

    <string name="logout">LOGOUT</string>
    <string name="your_profile">Your Profile</string>

    <string name="checkbox">Remeber my login information</string>
    <string name="remember_my_login_information">Remember my login information</string>
    <string name="your_email">Your Email</string>
    <string name="your_name">Your Name</string>
    <string name="phone_number">Phone Number</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="your_name2">Your Name</string>
    <string name="buttoneditprofile">Button</string>
    <string name="textview">TextView</string>
    <string name="your_email_address">Your Email Address</string>
    <string name="textview2">TextView</string>
    <string name="phone_number3">Phone Number</string>
    <string name="textview3">TextView</string>
    <string name="todo2">TODO</string>
    <string name="todo">TODO</string>

    <string name="button">Button</string>
    <string name="reset_password">Reset Password</string>
    <string name="edit_your_profile">Edit Your Profile</string>
    <string name="todo3" />
    <string name="email2">Email:</string>

    <string name="full_name2">Full Name:</string>
    <string name="phone_number4">Phone Number:</string>
    <string name="email4">Email:</string>
    <string name="save">SAVE</string>

</resources>
