<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background = "#FFD1DC"
    tools:context=".Logout">


    <TextView
        android:id="@+id/txtlogout"
        android:layout_width="266dp"
        android:layout_height="44dp"
        android:text="@string/your_profile"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.103" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="254dp"
        android:layout_height="42dp"
        android:onClick="logout"
        android:text="@string/logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.546"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtlogout"
        app:layout_constraintVertical_bias="0.951" />

    <TextView
        android:id="@+id/profileEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_email"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/btnLogout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/profileName"
        app:layout_constraintVertical_bias="0.104" />

    <TextView
        android:id="@+id/profileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_name"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btnLogout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/txtlogout"
        app:layout_constraintVertical_bias="0.221" />

    <TextView
        android:id="@+id/profilePhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/phone_number"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/btnLogout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.312"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/profileEmail"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btnLogout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtlogout"
        app:layout_constraintVertical_bias="0.23"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/todo" />

    <Button
        android:id="@+id/changeProfile"
        android:layout_width="261dp"
        android:layout_height="48dp"
        android:text="@string/edit_your_profile"
        app:layout_constraintBottom_toTopOf="@+id/btnLogout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/resetPass"
        android:layout_width="257dp"
        android:layout_height="47dp"
        android:text="@string/reset_password"
        app:layout_constraintBottom_toTopOf="@+id/btnLogout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.922" />

    <Button
        android:id="@+id/btnOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Order Here"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.66" />


</androidx.constraintlayout.widget.ConstraintLayout>