<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfile">


    <ImageView
        android:id="@+id/mailimg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.026"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.522"
        app:srcCompat="@android:drawable/sym_action_email" />

    <ImageView
        android:id="@+id/profileImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.119"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/todo" />

    <Button
        android:id="@+id/saveProfileInfo"
        android:layout_width="234dp"
        android:layout_height="45dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.902" />

    <EditText
        android:id="@+id/profileEmail"
        android:layout_width="330dp"
        android:layout_height="56dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email4"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/saveProfileInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileImageView"
        app:layout_constraintVertical_bias="0.457" />

    <EditText
        android:id="@+id/profilePhoneno"
        android:layout_width="330dp"
        android:layout_height="56dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/phone_numb"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/saveProfileInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileImageView"
        app:layout_constraintVertical_bias="0.68" />

    <EditText
        android:id="@+id/profileFullName"
        android:layout_width="330dp"
        android:layout_height="56dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/full_name"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/saveProfileInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileImageView"
        app:layout_constraintVertical_bias="0.25" />
</androidx.constraintlayout.widget.ConstraintLayout>